# watagashi

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.watagashi  coroutine.watagashi  newConfig.watagashi
libsrc/: staticlib.cpp  staticlib.h
src/: CMakeLists.txt  buildEnviroment.cpp  buildEnviroment.h  builder.cpp  builder.h  config.cpp  config.h  configJsonParser.cpp  configJsonParser.h  data.cpp  data.h  errorReceiver.cpp  errorReceiver.h  exception.hpp  includeFileAnalyzer.cpp  includeFileAnalyzer.h  main.cpp  parser.cpp  parser.h  processServer.cpp  processServer.h  programOptions.cpp  programOptions.h  specialVariables.cpp  specialVariables.h  utility.cpp  utility.h
src/json11/: json11.cpp  json11.hpp
src/parser/: enviroment.cpp  enviroment.h  indent.cpp  indent.h  line.cpp  line.h  location.cpp  location.h  parseMode.cpp  parseMode.h  parser.cpp  parser.h  parserUtility.cpp  parserUtility.h  scope.cpp  scope.h  source.cpp  source.h  value.cpp  value.h
src/parser/mode/: arrayAccessor.cpp  arrayAccessor.h  boolean.cpp  boolean.h  branch.cpp  branch.h  callFunction.cpp  callFunction.h  createCoroutine.cpp  createCoroutine.h  defineFunction.cpp  defineFunction.h  doNothing.h  multiLineComment.cpp  multiLineComment.h  normal.cpp  normal.h  objectDefined.cpp  objectDefined.h  passTo.cpp  passTo.h  return.cpp  return.h  send.cpp  send.h
testSrc/: A.cpp  A.h  main.cpp
testcase/: correctMinimumConfig.txt  fullConfig.watagasi  minimumConfig.watagasi  regex.watagasi
testcase/fullConfig/: ignore.cpp  main.cpp
testcase/minimumConfig/: main.cpp
testcase/minimumConfig/include/: header.cpp  header.h
